force-app/main/default/objects/Components_to_Droid_Junc__c/Components_to_Droid_Junc__c.object-meta.xml
<CustomObject>
    <label>Components to Droid Junc</label>
    <nameField>
        <displayFormat>C-D{0000000000}</displayFormat>
        <label>Components to Droid Junc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components to Droid Junc</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>