force-app/main/default/objects/Components_to_Droid_Junc__c/fields/Component_For__c.field-meta.xml
<CustomField>
    <fullName>Component_For__c</fullName>
    <formula>Droid__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component For</label>
    <type>Text</type>
</CustomField>