force-app/main/default/objects/Components_to_Droid_Junc__c/fields/Droid__c.field-meta.xml
<CustomField>
    <fullName>Droid__c</fullName>
    <label>Droid</label>
    <referenceTo>Droid__c</referenceTo>
    <relationshipLabel>Components to Droid Junc</relationshipLabel>
    <relationshipName>Components_to_Droid_Junc</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>