force-app/main/default/objects/Components_to_Droid_Junc__c/fields/Droid_Components__c.field-meta.xml
<CustomField>
    <fullName>Droid_Components__c</fullName>
    <label>Droid Components</label>
    <referenceTo>Droid_Components__c</referenceTo>
    <relationshipLabel>Components to Droid Junc</relationshipLabel>
    <relationshipName>Components_to_Droid_Junc</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>