force-app/main/default/objects/Components_to_Droid_Junc__c/fields/Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Cost__c</fullName>
    <formula>Droid_Components__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>